idf_component_register(
    SRCS
        "src/core/logs_storage.c"
        "src/core/logs_storage_backend.c"
        "src/core/logs_storage_file_utils.c"
        "src/core/logs_storage_worker.c"
        "src/core/logs_storage_rotation.c"
        "src/core/logs_storage_web_config.c"
        "src/web/web_main.c"
        "src/web/web_wifi.c"
        "src/web/web_api.c"
        "src/web/web_ui.c"
        "src/web/web_dns_server.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        spi_flash
        spiffs
        esp_system
        esp_timer
        esp_wifi
        esp_http_server
        esp_event
        esp_netif
        nvs_flash
        freertos
)
